--- a/blogpost.html
+++ b/blogpost.html
@@ -4,16 +4,20 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <div>id="container">
+        <div id="container">
+            <div id="cabecera">
+                cabecera
+            </div>
             <div id="post">
         
-            <h1>Este es el título 
-            atractivo e interesandte del 
-            post</h1>
-            <p>Y este es el parrafo de 
-            inicio donde vamos a explicar
-            las cosas increibles que se 
-            puede hacer con ramas</p>
+                <h1>Este es el título 
+                atractivo e interesandte del 
+                 post</h1>
+                <p>Y este es el parrafo de 
+                inicio donde vamos a explicar
+                las cosas increibles que se 
+                 puede hacer con ramas</p>
+            <div>
         </div>
     </body>
 </html>
