--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,13 @@
             inicio donde vamos a explicar
             las cosas increibles que se 
             puede hacer con ramas</p>
+            <p>los blogs son la mejor forma
+            de compartir información y tus ideas.
+            mucho mas que ir a conferencias
+            o salir en youtube. excepto si eres
+            un rockstar. pero estadisticamente
+            no lo eres... por ahora.
+            </p>
         </div>
     </body>
 </html>
